created dashboard and summary for stakeholder evaluations. commit changes before production

--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -141,7 +141,7 @@
                 <div class="card">
                   <div class="card-body">
                     <h5 class="card-title" style="text-align: center;">{{ total_user }}</h5>
-                    <p class="card-text " style="text-align: center;">Total User</p>
+                    <p class="card-text " style="text-align: center;"><small>Registered Users</small></p>
                 </div>
               </div>
               </div>
