--- a/Feedbacksystem/templates/pages/facultylogin.html
+++ b/Feedbacksystem/templates/pages/facultylogin.html
@@ -24,7 +24,7 @@
         {% endfor %}
     </div>
     {% endif %}
-    <div class="container-body" id="container">
+    <div class="container-body mb-5" id="container">
         
         <div class="form-container sign-up" {% if request.POST and 'register' in request.POST %} id="active" {% endif %}>
             <form method="POST" action="">
