--- a/Feedbacksystem/templates/pages/admin.html
+++ b/Feedbacksystem/templates/pages/admin.html
@@ -148,16 +148,16 @@
                <div class="col-md-2 mb-2">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title" style="text-align: center;">{{ total_faculty }}</h5>
-                    <p class="card-text " style="text-align: center;">Total Faculty</p>
+                    <h5 class="card-title" style="text-align: center;">{{registered_faculty}} / {{ total_faculty }}</h5>
+                    <p class="card-text " style="text-align: center;"><small>Registered/Total Faculty</small></p>
                 </div>
               </div>
               </div>
                <div class="col-md-2 mb-2">
                 <div class="card">
                   <div class="card-body">
-                    <h5 class="card-title" style="text-align: center;">{{ total_students }}</h5>
-                    <p class="card-text " style="text-align: center;">Total Students</p>
+                    <h5 class="card-title" style="text-align: center;">{{registered_students}} / {{ total_students }}</h5>
+                    <p class="card-text " style="text-align: center;"><small>Registered/Total Students</small></p>
                 </div>
               </div>
               </div>
