--- a/Feedbacksystem/templates/pages/adminlogin.html
+++ b/Feedbacksystem/templates/pages/adminlogin.html
@@ -27,9 +27,8 @@
   {% if messages %}
   <div class="container  col-md-5 col-12 mt-4">
       {% for message in messages %}
-          <div class="alert alert-danger alert-dismissible fade show" role="alert">
+          <div class="alert alert-danger alert-dismissible" role="alert">
               {{ message }}
-              <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
           </div>
       {% endfor %}
   </div>
