--- a/Feedbacksystem/templates/pages/student_edit_evaluation_form.html
+++ b/Feedbacksystem/templates/pages/student_edit_evaluation_form.html
@@ -595,7 +595,7 @@
                 <tr> 
                     {% if question.order == 13 %}
                     <td>{{question.text}}</td>
-                    <td>{{ form.thoroughly_explained_and_processed_the_learning_activities_throughout_the_training }}</td>
+                    <td>{{ form.explained_activities }}</td>
                     {% endif %}
                 </tr>
                 <tr>
