--- a/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
+++ b/Feedbacksystem/templates/pages/facultyfeedbackandevaluations.html
@@ -38,10 +38,12 @@
       </select>
     </div>
   
-    <!-- Search Form and Export Button -->
+    {% if evaluation_status == "In Progress" %}
     <div class="col-lg-4 col-md-2">
-      <a href="{% url 'faculty_evaluations_excel' %}?{{ request.GET.urlencode }}" class="btn btn-success"><i class="bi bi-file-earmark-excel-fill"></i>Export as Excel File</a>
+        <a href="{% url 'faculty_evaluations_excel' %}?{{ request.GET.urlencode }}" class="btn btn-success"><i class="bi bi-file-earmark-excel-fill"></i>Export as Excel File</a>
     </div>
+    {% endif %}
+    
   </div>
     <div class="table-responsive">
         <table class="table table-bordered ">
