--- a/Feedbacksystem/templates/pages/facultydashboard.html
+++ b/Feedbacksystem/templates/pages/facultydashboard.html
@@ -291,7 +291,8 @@
 <div class="d-flex" style="gap: 1em;">
   <div class="dropdown mb-2">
     <button class="btn btn-primary dropdown-toggle" type="button" id="filterDropdown" data-bs-toggle="dropdown" aria-expanded="false">
-        Filter Data
+          <i class="bi bi-funnel"></i> Filter Data
+
     </button>
     <div class="dropdown-menu filter_dropdown" aria-labelledby="filterDropdown">
         <form method="GET" id="filterForm" class="form">
