--- a/Feedbacksystem/templates/pages/login.html
+++ b/Feedbacksystem/templates/pages/login.html
@@ -98,7 +98,7 @@
     <div class="col-lg-10 col-md-9 col-sm-9 col-9">
         <p class="feedback-note">For visitors, Share your experience by filling out our <b>Stakeholder Feedback Form</b> to help us improve our services. Simply scan the QR code or <a href="{% url 'stakeholder_feedback_form' %}">click here</a> to get started.</p>
     </div>
-    <div class="col-lg-2 col-md-2 col-sm-2 col-3 stakeholderform_qrcode "><img src="{% static 'images/stakeholderform.jpg' %}" alt="cvsu bacoor stakeholder form qr code" height="80px" width="80px"></div>
+    <div class="col-lg-2 col-md-2 col-sm-2 col-3 stakeholderform_qrcode "><img src="{% static 'images/CvSU_Stakeholder_Feedback_Form.jpg' %}" alt="CvSU Bacoor Stakeholder Form QR Code" height="80px" width="80px"></div>
 </div>
 
 <script src="{%static 'js/scripts.js' %}">
