added qr code option for events

--- a/Feedbacksystem/templates/pages/adminlogin.html
+++ b/Feedbacksystem/templates/pages/adminlogin.html
@@ -18,8 +18,9 @@
       background-color: #f7b205; 
       font-weight: 600;
       margin-top: 1.5em;
-     
+      color: #000000;
     }
+
   </style>
 
 </head>
