--- a/Feedbacksystem/templates/pages/admin_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/admin_event_evaluations.html
@@ -11,10 +11,10 @@
 <hr>
 {% block feature %}
 
-<form action="{% url 'eventevaluations_csv' %}" method="get">
+<form action="{% url 'eventevaluations_excel' %}" method="get">
     <input type="hidden" name="event_id" value="{{ event.id }}">
     <input type="hidden" name="{{ request.GET.urlencode }}">
-    <button type="submit" class="btn btn-primary">Export CSV</button>
+    <button type="submit" class="btn btn-success"><i class="bi bi-file-earmark-excel"></i> Export Excel File</button>
 </form>
 <div class="table-responsive mt-2">
     <table class="table table-bordered " >
