--- a/Feedbacksystem/templates/pages/faculty_event_evaluations.html
+++ b/Feedbacksystem/templates/pages/faculty_event_evaluations.html
@@ -122,8 +122,10 @@
                         {% endfor %}
                     </div>
                 </div>
-                <button type="button" class="btn btn-warning btn-sm mb-2 mt-2" onclick="clearAll()">Clear Selections</button>
+
                     <p>{{ form.evaluation_status.label_tag }} {{ form.evaluation_status }}</p>
+                    <p>{{ form.requires_attendance.label_tag }} {{ form.requires_attendance }}</p>
+                    <button type="button" class="btn btn-warning btn-sm mb-2 mt-2" onclick="clearAll()">Clear Selections</button>
                     
         </div>
         <div class="modal-footer">
@@ -196,6 +198,7 @@
                     <th scope="col">Event Type</th>
                     <th scope="col">Course/Department Attendees</th>
                     <th scope="col">Evaluation Status</th>
+                    <th scope="col">QR Code</th>
                     <th scope="col">Options</th>
                 </tr>
                 
@@ -211,6 +214,13 @@
                     <td>{{ i.event_type }}</td>
                     <td>{{ i.attendees_summary }}</td>
                     <td>{{ i.evaluation_identifier }}</td>
+                    <td>
+                    {% if i.qr_code %}
+                        <img src="{{ i.qr_code.url }}" alt="QR Code" width="100" height="100">
+                    {% else %}
+                        <p>No QR code generated for this event.</p>
+                    {% endif %}
+                    </td>
                     <td style="display: flex; flex-direction: row; gap:1em; align-items: center; height: 7.5em;"> <a href="{% url 'view_faculty_event_evaluations'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-primary d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-eye-fill" style="font-size:20px; margin-right: 5px;"></i> </button></a>
 
                         <a href="{% url 'edit_faculty_events'  i.pk  %}" style="text-decoration: none;"><button class="btn btn-warning d-flex align-items-center" style=" padding:1px 2px 1px 7px"><i class="bi bi-pencil-square" style="font-size:20px; margin-right: 5px;"></i></button></a>
